--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=password
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.profiles.active=h2
